// Package strategy provides trading strategy implementations
package strategy

import (
	"fmt"
	"log"
	"math"
	"sync"
	"time"

	mdpb "github.com/yourusername/quantlink-trade-system/pkg/proto/md"
	orspb "github.com/yourusername/quantlink-trade-system/pkg/proto/ors"
	"github.com/yourusername/quantlink-trade-system/pkg/strategy/spread"
)

// PairwiseArbStrategy implements a statistical arbitrage / pairs trading strategy
// It identifies and trades mean-reverting spread between two correlated instruments
type PairwiseArbStrategy struct {
	*BaseStrategy

	// Strategy parameters
	symbol1           string  // First symbol (e.g., "ag2412")
	symbol2           string  // Second symbol (e.g., "ag2501")
	lookbackPeriod    int     // Period for mean/std calculation (default: 100)
	entryZScore       float64 // Z-score threshold to enter (default: 2.0)
	exitZScore        float64 // Z-score threshold to exit (default: 0.5)
	orderSize         int64   // Size per leg (default: 10)
	maxPositionSize   int64   // Maximum position per leg (default: 50)
	minCorrelation    float64 // Minimum correlation to trade (default: 0.7)
	hedgeRatio        float64 // Current hedge ratio (calculated dynamically)
	spreadType        string  // "ratio" or "difference" (default: "difference")
	useCointegration  bool    // Use cointegration instead of correlation (default: false)

	// State
	price1            float64
	price2            float64
	bid1              float64  // å“ç§1ä¹°ä¸€ä»·
	ask1              float64  // å“ç§1å–ä¸€ä»·
	bid2              float64  // å“ç§2ä¹°ä¸€ä»·
	ask2              float64  // å“ç§2å–ä¸€ä»·
	lastTradeTime     time.Time
	minTradeInterval  time.Duration
	slippageTicks     int     // æ»‘ç‚¹(tickæ•°)
	useAggressivePrice bool   // æ˜¯å¦ä½¿ç”¨ä¸»åŠ¨æˆäº¤ä»·æ ¼

	// Spread analyzer (encapsulates spread calculation and statistics)
	spreadAnalyzer    *spread.SpreadAnalyzer

	// Position tracking (separate for each leg)
	leg1Position      int64
	leg2Position      int64

	mu sync.RWMutex
}

// NewPairwiseArbStrategy creates a new pairs trading strategy
func NewPairwiseArbStrategy(id string) *PairwiseArbStrategy {
	maxHistoryLen := 200

	pas := &PairwiseArbStrategy{
		BaseStrategy:     NewBaseStrategy(id, "pairwise_arb"),
		lookbackPeriod:   100,
		entryZScore:      2.0,
		exitZScore:       0.5,
		orderSize:        10,
		maxPositionSize:  50,
		minCorrelation:   0.7,
		hedgeRatio:       1.0,
		spreadType:       "difference",
		useCointegration: false,
		minTradeInterval: 3 * time.Second,
		// SpreadAnalyzer å°†åœ¨ Initialize ä¸­åˆ›å»ºï¼ˆéœ€è¦çŸ¥é“ symbol åç§°ï¼‰
		spreadAnalyzer:   nil,
	}

	// é¢„åˆ›å»ºä¸€ä¸ªä¸´æ—¶çš„ SpreadAnalyzerï¼ˆå°†åœ¨ Initialize æ—¶é‡æ–°åˆ›å»ºï¼‰
	pas.spreadAnalyzer = spread.NewSpreadAnalyzer("", "", spread.SpreadTypeDifference, maxHistoryLen)

	// è®¾ç½®å…·ä½“ç­–ç•¥å®ä¾‹ï¼Œç”¨äºå‚æ•°çƒ­åŠ è½½
	pas.BaseStrategy.SetConcreteStrategy(pas)

	return pas
}

// Initialize initializes the strategy
func (pas *PairwiseArbStrategy) Initialize(config *StrategyConfig) error {
	pas.mu.Lock()
	defer pas.mu.Unlock()

	pas.Config = config

	// Validate we have exactly 2 symbols
	if len(config.Symbols) != 2 {
		return fmt.Errorf("pairwise arbitrage requires exactly 2 symbols")
	}

	pas.symbol1 = config.Symbols[0]
	pas.symbol2 = config.Symbols[1]

	// Load strategy-specific parameters (load spread_type first)
	if val, ok := config.Parameters["lookback_period"].(float64); ok {
		pas.lookbackPeriod = int(val)
	}
	if val, ok := config.Parameters["entry_zscore"].(float64); ok {
		pas.entryZScore = val
	}
	if val, ok := config.Parameters["exit_zscore"].(float64); ok {
		pas.exitZScore = val
	}
	if val, ok := config.Parameters["order_size"].(float64); ok {
		pas.orderSize = int64(val)
	}
	if val, ok := config.Parameters["max_position_size"].(float64); ok {
		pas.maxPositionSize = int64(val)
	}
	if val, ok := config.Parameters["min_correlation"].(float64); ok {
		pas.minCorrelation = val
	}
	if val, ok := config.Parameters["spread_type"].(string); ok {
		pas.spreadType = val
	}

	// åˆå§‹åŒ– SpreadAnalyzerï¼ˆç°åœ¨çŸ¥é“ symbol å’Œ spread_type äº†ï¼‰
	spreadType := spread.SpreadTypeDifference
	if pas.spreadType == "ratio" {
		spreadType = spread.SpreadTypeRatio
	}
	pas.spreadAnalyzer = spread.NewSpreadAnalyzer(pas.symbol1, pas.symbol2, spreadType, 200)
	if val, ok := config.Parameters["use_cointegration"].(bool); ok {
		pas.useCointegration = val
	}
	if val, ok := config.Parameters["trade_interval_ms"].(float64); ok {
		pas.minTradeInterval = time.Duration(val) * time.Millisecond
	}
	// æ»‘ç‚¹å‚æ•°ï¼ˆæ”¯æŒintæˆ–float64ç±»å‹ï¼‰
	if val, ok := config.Parameters["slippage_ticks"].(float64); ok {
		pas.slippageTicks = int(val)
	} else if val, ok := config.Parameters["slippage_ticks"].(int); ok {
		pas.slippageTicks = val
	}
	// æ˜¯å¦ä½¿ç”¨ä¸»åŠ¨æˆäº¤ä»·æ ¼
	if val, ok := config.Parameters["use_market_price"].(bool); ok {
		pas.useAggressivePrice = val
	}

	log.Printf("[PairwiseArbStrategy:%s] Initialized %s/%s, entry_z=%.2f, exit_z=%.2f, lookback=%d, min_corr=%.2f, slippage=%d ticks",
		pas.ID, pas.symbol1, pas.symbol2, pas.entryZScore, pas.exitZScore, pas.lookbackPeriod, pas.minCorrelation, pas.slippageTicks)

	return nil
}

// OnMarketData handles market data updates
func (pas *PairwiseArbStrategy) OnMarketData(md *mdpb.MarketDataUpdate) {
	pas.mu.Lock()
	defer pas.mu.Unlock()

	if !pas.IsRunning() {
		return
	}

	// Update indicators
	pas.PrivateIndicators.UpdateAll(md)

	// Track prices for both symbols
	if len(md.BidPrice) == 0 || len(md.AskPrice) == 0 {
		return
	}
	midPrice := (md.BidPrice[0] + md.AskPrice[0]) / 2.0

	if md.Symbol == pas.symbol1 {
		pas.price1 = midPrice
		pas.bid1 = md.BidPrice[0]
		pas.ask1 = md.AskPrice[0]
		pas.spreadAnalyzer.UpdatePrice1(midPrice, int64(md.Timestamp))
	} else if md.Symbol == pas.symbol2 {
		pas.price2 = midPrice
		pas.bid2 = md.BidPrice[0]
		pas.ask2 = md.AskPrice[0]
		pas.spreadAnalyzer.UpdatePrice2(midPrice, int64(md.Timestamp))
	}

	// Need both prices to calculate spread
	if pas.price1 == 0 || pas.price2 == 0 {
		return
	}

	// Calculate spread and update statistics using SpreadAnalyzer
	pas.spreadAnalyzer.CalculateSpread()
	pas.spreadAnalyzer.UpdateAll(pas.lookbackPeriod)

	// Update PNL (use average price)
	avgPrice := (pas.price1 + pas.price2) / 2.0
	pas.BaseStrategy.UpdatePNL(avgPrice)
	pas.BaseStrategy.UpdateRiskMetrics(avgPrice)

	// Get current statistics from SpreadAnalyzer
	spreadStats := pas.spreadAnalyzer.GetStats()

	// Update condition state for UI display
	indicators := map[string]float64{
		"z_score":         spreadStats.ZScore,
		"entry_threshold": pas.entryZScore,
		"exit_threshold":  pas.exitZScore,
		"spread":          spreadStats.CurrentSpread,
		"spread_mean":     spreadStats.Mean,
		"spread_std":      spreadStats.Std,
		"correlation":     spreadStats.Correlation,
		"min_correlation": pas.minCorrelation,
		"hedge_ratio":     spreadStats.HedgeRatio,
		// Leg 1 details
		"leg1_price":    pas.price1,
		"leg1_position": float64(pas.leg1Position),
		// Leg 2 details
		"leg2_price":    pas.price2,
		"leg2_position": float64(pas.leg2Position),
	}

	// Conditions are met if:
	// 1. Z-score exceeds entry threshold
	// 2. Correlation is above minimum
	// 3. Enough history data
	conditionsMet := spreadStats.Std > 1e-10 &&
		math.Abs(spreadStats.ZScore) >= pas.entryZScore &&
		spreadStats.Correlation >= pas.minCorrelation &&
		pas.spreadAnalyzer.IsReady(pas.lookbackPeriod)

	// Update control state with current conditions
	pas.ControlState.UpdateConditions(conditionsMet, spreadStats.ZScore, indicators)

	// Check if we should trade
	now := time.Now()

	// Debug logging periodically (every 5 seconds)
	if time.Since(pas.lastTradeTime) > 5*time.Second {
		log.Printf("[PairwiseArb:%s] Stats: zscore=%.2f (need Â±%.2f), corr=%.3f (need %.3f), std=%.4f, ready=%v, condMet=%v",
			pas.ID, spreadStats.ZScore, pas.entryZScore, spreadStats.Correlation, pas.minCorrelation,
			spreadStats.Std, pas.spreadAnalyzer.IsReady(pas.lookbackPeriod), conditionsMet)
	}

	if now.Sub(pas.lastTradeTime) < pas.minTradeInterval {
		return
	}

	// Check correlation before trading
	if spreadStats.Correlation < pas.minCorrelation {
		return
	}

	// Generate signals based on z-score
	pas.generateSignals(md)
	pas.lastTradeTime = now
}


// generateSignals generates trading signals based on z-score
func (pas *PairwiseArbStrategy) generateSignals(md *mdpb.MarketDataUpdate) {
	// Get current statistics from SpreadAnalyzer
	spreadStats := pas.spreadAnalyzer.GetStats()

	if spreadStats.Std < 1e-10 {
		return
	}

	// Entry signals
	if math.Abs(spreadStats.ZScore) >= pas.entryZScore {
		// Spread has diverged significantly - enter mean reversion trade
		if spreadStats.ZScore > 0 {
			// Spread is too high - short spread (sell symbol1, buy symbol2)
			pas.generateSpreadSignals(md, "short", pas.orderSize)
		} else {
			// Spread is too low - long spread (buy symbol1, sell symbol2)
			pas.generateSpreadSignals(md, "long", pas.orderSize)
		}
		return
	}

	// Exit signals
	if pas.leg1Position != 0 && math.Abs(spreadStats.ZScore) <= pas.exitZScore {
		// Spread has reverted to mean - close positions
		pas.generateExitSignals(md)
	}
}

// generateSpreadSignals generates signals to enter a spread trade
func (pas *PairwiseArbStrategy) generateSpreadSignals(md *mdpb.MarketDataUpdate, direction string, qty int64) {
	// Check position limits
	if math.Abs(float64(pas.leg1Position)) >= float64(pas.maxPositionSize) {
		return
	}

	// Get current statistics from SpreadAnalyzer
	spreadStats := pas.spreadAnalyzer.GetStats()

	var signal1Side, signal2Side OrderSide
	if direction == "long" {
		signal1Side = OrderSideBuy
		signal2Side = OrderSideSell
	} else {
		signal1Side = OrderSideSell
		signal2Side = OrderSideBuy
	}

	// Calculate hedge quantity using current hedge ratio
	hedgeQty := int64(math.Round(float64(qty) * spreadStats.HedgeRatio))

	// è®¡ç®—leg1çš„è®¢å•ä»·æ ¼ï¼ˆä½¿ç”¨bid/askå’Œæ»‘ç‚¹ï¼‰
	orderPrice1 := GetOrderPrice(signal1Side, pas.bid1, pas.ask1, pas.symbol1,
		pas.slippageTicks, pas.useAggressivePrice)

	// Generate signal for leg 1
	signal1 := &TradingSignal{
		StrategyID: pas.ID,
		Symbol:     pas.symbol1,
		Side:       signal1Side,
		Price:      orderPrice1,  // ä½¿ç”¨è®¡ç®—åçš„ä»·æ ¼
		Quantity:   qty,
		Signal:     -spreadStats.ZScore, // Negative z-score means buy, positive means sell
		Confidence: math.Min(1.0, math.Abs(spreadStats.ZScore)/5.0),
		Timestamp:  time.Now(),
		Metadata: map[string]interface{}{
			"type":        "entry",
			"leg":         1,
			"direction":   direction,
			"z_score":     spreadStats.ZScore,
			"spread":      spreadStats.CurrentSpread,
			"hedge_ratio": spreadStats.HedgeRatio,
		},
	}
	pas.BaseStrategy.AddSignal(signal1)

	// è®¡ç®—leg2çš„è®¢å•ä»·æ ¼
	orderPrice2 := GetOrderPrice(signal2Side, pas.bid2, pas.ask2, pas.symbol2,
		pas.slippageTicks, pas.useAggressivePrice)

	// Generate signal for leg 2
	signal2 := &TradingSignal{
		StrategyID: pas.ID,
		Symbol:     pas.symbol2,
		Side:       signal2Side,
		Price:      orderPrice2,  // ä½¿ç”¨è®¡ç®—åçš„ä»·æ ¼
		Quantity:   hedgeQty,
		Signal:     spreadStats.ZScore, // Opposite direction
		Confidence: math.Min(1.0, math.Abs(spreadStats.ZScore)/5.0),
		Timestamp:  time.Now(),
		Metadata: map[string]interface{}{
			"type":        "entry",
			"leg":         2,
			"direction":   direction,
			"z_score":     spreadStats.ZScore,
			"spread":      spreadStats.CurrentSpread,
			"hedge_ratio": spreadStats.HedgeRatio,
		},
	}
	pas.BaseStrategy.AddSignal(signal2)

	log.Printf("[PairwiseArbStrategy:%s] Entering %s spread: z=%.2f, leg1=%v %d, leg2=%v %d",
		pas.ID, direction, spreadStats.ZScore, signal1Side, qty, signal2Side, hedgeQty)

	// æ³¨æ„ï¼šä¸åœ¨è¿™é‡Œç›´æ¥ä¿®æ”¹ leg1Position/leg2Position
	// æŒä»“åº”è¯¥ä»è®¢å•æˆäº¤å›æŠ¥ä¸­è®¡ç®—ï¼ˆOnOrderUpdateï¼‰
}

// generateExitSignals generates signals to exit the spread trade
func (pas *PairwiseArbStrategy) generateExitSignals(md *mdpb.MarketDataUpdate) {
	if pas.leg1Position == 0 {
		return
	}

	// Get current z-score
	zScore := pas.spreadAnalyzer.GetZScore()

	// Close leg 1
	var signal1Side OrderSide
	qty1 := absInt64(pas.leg1Position)
	if pas.leg1Position > 0 {
		signal1Side = OrderSideSell
	} else {
		signal1Side = OrderSideBuy
	}

	// è®¡ç®—å¹³ä»“ä»·æ ¼
	exitPrice1 := GetOrderPrice(signal1Side, pas.bid1, pas.ask1, pas.symbol1,
		pas.slippageTicks, pas.useAggressivePrice)

	signal1 := &TradingSignal{
		StrategyID: pas.ID,
		Symbol:     pas.symbol1,
		Side:       signal1Side,
		Price:      exitPrice1,  // ä½¿ç”¨è®¡ç®—åçš„ä»·æ ¼
		Quantity:   qty1,
		Signal:     0,
		Confidence: 0.9,
		Timestamp:  time.Now(),
		Metadata: map[string]interface{}{
			"type":    "exit",
			"leg":     1,
			"z_score": zScore,
		},
	}
	pas.BaseStrategy.AddSignal(signal1)

	// Close leg 2
	var signal2Side OrderSide
	qty2 := absInt64(pas.leg2Position)
	if pas.leg2Position > 0 {
		signal2Side = OrderSideSell
	} else {
		signal2Side = OrderSideBuy
	}

	exitPrice2 := GetOrderPrice(signal2Side, pas.bid2, pas.ask2, pas.symbol2,
		pas.slippageTicks, pas.useAggressivePrice)

	signal2 := &TradingSignal{
		StrategyID: pas.ID,
		Symbol:     pas.symbol2,
		Side:       signal2Side,
		Price:      exitPrice2,  // ä½¿ç”¨è®¡ç®—åçš„ä»·æ ¼
		Quantity:   qty2,
		Signal:     0,
		Confidence: 0.9,
		Timestamp:  time.Now(),
		Metadata: map[string]interface{}{
			"type":    "exit",
			"leg":     2,
			"z_score": zScore,
		},
	}
	pas.BaseStrategy.AddSignal(signal2)

	log.Printf("[PairwiseArbStrategy:%s] Exiting spread: z=%.2f, leg1=%v %d, leg2=%v %d",
		pas.ID, zScore, signal1Side, qty1, signal2Side, qty2)

	// æ³¨æ„ï¼šä¸åœ¨è¿™é‡Œç›´æ¥é‡ç½®æŒä»“
	// æŒä»“åº”è¯¥ä»è®¢å•æˆäº¤å›æŠ¥ä¸­è®¡ç®—ï¼ˆOnOrderUpdateï¼‰
}

// OnOrderUpdate handles order updates
func (pas *PairwiseArbStrategy) OnOrderUpdate(update *orspb.OrderUpdate) {
	pas.mu.Lock()
	defer pas.mu.Unlock()

	log.Printf("[PairwiseArb:%s] ğŸš¨ OnOrderUpdate ENTRY: OrderID=%s, Status=%v, Symbol=%s, Side=%v, FilledQty=%d",
		pas.ID, update.OrderId, update.Status, update.Symbol, update.Side, update.FilledQty)

	if !pas.IsRunning() {
		log.Printf("[PairwiseArb:%s] âš ï¸  Strategy not running, ignoring update", pas.ID)
		return
	}

	// Update base strategy position (for overall PNL tracking)
	log.Printf("[PairwiseArb:%s] ğŸš¨ BEFORE UpdatePosition call, EstimatedPosition ptr=%p", pas.ID, pas.EstimatedPosition)
	pas.UpdatePosition(update)
	log.Printf("[PairwiseArb:%s] ğŸš¨ AFTER UpdatePosition call, EstimatedPosition=%+v", pas.ID, pas.EstimatedPosition)

	// Update leg-specific positions for pairwise arbitrage
	if update.Status == orspb.OrderStatus_FILLED && update.FilledQty > 0 {
		symbol := update.Symbol
		qty := int64(update.FilledQty)

		// Determine which leg this order belongs to
		if symbol == pas.symbol1 {
			// Update leg1 position
			if update.Side == orspb.OrderSide_BUY {
				pas.leg1Position += qty
			} else if update.Side == orspb.OrderSide_SELL {
				pas.leg1Position -= qty
			}
			log.Printf("[PairwiseArb:%s] Leg1 position updated: %s %s %d -> total: %d",
				pas.ID, symbol, update.Side, qty, pas.leg1Position)
		} else if symbol == pas.symbol2 {
			// Update leg2 position
			if update.Side == orspb.OrderSide_BUY {
				pas.leg2Position += qty
			} else if update.Side == orspb.OrderSide_SELL {
				pas.leg2Position -= qty
			}
			log.Printf("[PairwiseArb:%s] Leg2 position updated: %s %s %d -> total: %d",
				pas.ID, symbol, update.Side, qty, pas.leg2Position)
		}
	}
}

// OnTimer handles timer events
func (pas *PairwiseArbStrategy) OnTimer(now time.Time) {
	pas.mu.RLock()
	defer pas.mu.RUnlock()

	// Periodic housekeeping
	if !pas.IsRunning() {
		return
	}

	// Log spread status
	stats := pas.spreadAnalyzer.GetStats()
	if now.Unix()%30 == 0 && stats.Std > 0 {
		log.Printf("[PairwiseArbStrategy:%s] Spread=%.2f (mean=%.2f, std=%.2f), Z=%.2f, Pos=[%d,%d]",
			pas.ID, stats.CurrentSpread, stats.Mean, stats.Std,
			stats.ZScore, pas.leg1Position, pas.leg2Position)
	}
}

// Start starts the strategy
func (pas *PairwiseArbStrategy) Start() error {
	pas.mu.Lock()
	defer pas.mu.Unlock()

	// å°è¯•ä»æŒä¹…åŒ–æ–‡ä»¶æ¢å¤æŒä»“
	if snapshot, err := LoadPositionSnapshot(pas.ID); err == nil && snapshot != nil {
		log.Printf("[PairwiseArbStrategy:%s] Restoring position from snapshot (saved at %s)",
			pas.ID, snapshot.Timestamp.Format("2006-01-02 15:04:05"))

		// æ¢å¤legæŒä»“
		if qty, exists := snapshot.SymbolsPos[pas.symbol1]; exists {
			pas.leg1Position = qty
			log.Printf("[PairwiseArbStrategy:%s] Restored leg1 position: %s = %d",
				pas.ID, pas.symbol1, qty)
		}
		if qty, exists := snapshot.SymbolsPos[pas.symbol2]; exists {
			pas.leg2Position = qty
			log.Printf("[PairwiseArbStrategy:%s] Restored leg2 position: %s = %d",
				pas.ID, pas.symbol2, qty)
		}

		// æ¢å¤BaseStrategyæŒä»“
		pas.EstimatedPosition.LongQty = snapshot.TotalLongQty
		pas.EstimatedPosition.ShortQty = snapshot.TotalShortQty
		pas.EstimatedPosition.NetQty = snapshot.TotalNetQty
		pas.EstimatedPosition.AvgLongPrice = snapshot.AvgLongPrice
		pas.EstimatedPosition.AvgShortPrice = snapshot.AvgShortPrice
		pas.PNL.RealizedPnL = snapshot.RealizedPnL

		log.Printf("[PairwiseArbStrategy:%s] Position restored: Long=%d, Short=%d, Net=%d",
			pas.ID, snapshot.TotalLongQty, snapshot.TotalShortQty, snapshot.TotalNetQty)
	} else if err != nil {
		log.Printf("[PairwiseArbStrategy:%s] Warning: Failed to load position snapshot: %v", pas.ID, err)
	}

	// è®¾ç½®è¿è¡ŒçŠ¶æ€ä¸º Active
	pas.ControlState.RunState = StrategyRunStateActive
	pas.Activate()
	log.Printf("[PairwiseArbStrategy:%s] Started", pas.ID)
	return nil
}

// ApplyParameters åº”ç”¨æ–°å‚æ•°ï¼ˆå®ç° ParameterUpdatable æ¥å£ï¼‰
func (pas *PairwiseArbStrategy) ApplyParameters(params map[string]interface{}) error {
	pas.mu.Lock()
	defer pas.mu.Unlock()

	log.Printf("[PairwiseArbStrategy:%s] Applying new parameters...", pas.ID)

	// ä¿å­˜æ—§å‚æ•°ï¼ˆç”¨äºæ—¥å¿—ï¼‰
	oldEntryZ := pas.entryZScore
	oldExitZ := pas.exitZScore
	oldOrderSize := pas.orderSize
	oldMaxPos := pas.maxPositionSize

	// æ›´æ–°å‚æ•°
	updated := false

	if val, ok := params["entry_zscore"].(float64); ok {
		pas.entryZScore = val
		updated = true
	}
	if val, ok := params["exit_zscore"].(float64); ok {
		pas.exitZScore = val
		updated = true
	}
	if val, ok := params["order_size"].(int); ok {
		pas.orderSize = int64(val)
		updated = true
	} else if val, ok := params["order_size"].(float64); ok {
		pas.orderSize = int64(val)
		updated = true
	}
	if val, ok := params["max_position_size"].(int); ok {
		pas.maxPositionSize = int64(val)
		updated = true
	} else if val, ok := params["max_position_size"].(float64); ok {
		pas.maxPositionSize = int64(val)
		updated = true
	}
	if val, ok := params["lookback_period"].(int); ok {
		pas.lookbackPeriod = val
		updated = true
	} else if val, ok := params["lookback_period"].(float64); ok {
		pas.lookbackPeriod = int(val)
		updated = true
	}
	if val, ok := params["min_correlation"].(float64); ok {
		pas.minCorrelation = val
		updated = true
	}

	if !updated {
		return fmt.Errorf("no valid parameters found to update")
	}

	// å‚æ•°éªŒè¯
	if pas.entryZScore <= pas.exitZScore {
		// å›æ»š
		pas.entryZScore = oldEntryZ
		pas.exitZScore = oldExitZ
		return fmt.Errorf("entry_zscore (%.2f) must be greater than exit_zscore (%.2f)",
			pas.entryZScore, pas.exitZScore)
	}

	if pas.orderSize <= 0 || pas.orderSize > pas.maxPositionSize {
		pas.orderSize = oldOrderSize
		pas.maxPositionSize = oldMaxPos
		return fmt.Errorf("invalid order_size (%d) or max_position_size (%d)",
			pas.orderSize, pas.maxPositionSize)
	}

	// è¾“å‡ºå˜æ›´æ—¥å¿—
	log.Printf("[PairwiseArbStrategy:%s] âœ“ Parameters updated:", pas.ID)
	if oldEntryZ != pas.entryZScore {
		log.Printf("[PairwiseArbStrategy:%s]   entry_zscore: %.2f -> %.2f",
			pas.ID, oldEntryZ, pas.entryZScore)
	}
	if oldExitZ != pas.exitZScore {
		log.Printf("[PairwiseArbStrategy:%s]   exit_zscore: %.2f -> %.2f",
			pas.ID, oldExitZ, pas.exitZScore)
	}
	if oldOrderSize != pas.orderSize {
		log.Printf("[PairwiseArbStrategy:%s]   order_size: %d -> %d",
			pas.ID, oldOrderSize, pas.orderSize)
	}
	if oldMaxPos != pas.maxPositionSize {
		log.Printf("[PairwiseArbStrategy:%s]   max_position_size: %d -> %d",
			pas.ID, oldMaxPos, pas.maxPositionSize)
	}

	return nil
}

// GetCurrentParameters è·å–å½“å‰å‚æ•°ï¼ˆç”¨äºAPIæŸ¥è¯¢ï¼‰
func (pas *PairwiseArbStrategy) GetCurrentParameters() map[string]interface{} {
	pas.mu.RLock()
	defer pas.mu.RUnlock()

	return map[string]interface{}{
		"entry_zscore":       pas.entryZScore,
		"exit_zscore":        pas.exitZScore,
		"order_size":         pas.orderSize,
		"max_position_size":  pas.maxPositionSize,
		"lookback_period":    pas.lookbackPeriod,
		"min_correlation":    pas.minCorrelation,
		"hedge_ratio":        pas.hedgeRatio,
		"spread_type":        pas.spreadType,
		"use_cointegration":  pas.useCointegration,
	}
}

// Stop stops the strategy
func (pas *PairwiseArbStrategy) Stop() error {
	pas.mu.Lock()
	defer pas.mu.Unlock()

	// ä¿å­˜å½“å‰æŒä»“åˆ°æ–‡ä»¶
	snapshot := PositionSnapshot{
		StrategyID:    pas.ID,
		Timestamp:     time.Now(),
		TotalLongQty:  pas.EstimatedPosition.LongQty,
		TotalShortQty: pas.EstimatedPosition.ShortQty,
		TotalNetQty:   pas.EstimatedPosition.NetQty,
		AvgLongPrice:  pas.EstimatedPosition.AvgLongPrice,
		AvgShortPrice: pas.EstimatedPosition.AvgShortPrice,
		RealizedPnL:   pas.PNL.RealizedPnL,
		SymbolsPos: map[string]int64{
			pas.symbol1: pas.leg1Position,
			pas.symbol2: pas.leg2Position,
		},
	}

	if err := SavePositionSnapshot(snapshot); err != nil {
		log.Printf("[PairwiseArbStrategy:%s] Warning: Failed to save position snapshot: %v", pas.ID, err)
		// ä¸é˜»æ–­åœæ­¢æµç¨‹
	} else {
		log.Printf("[PairwiseArbStrategy:%s] Position snapshot saved: Long=%d, Short=%d, Net=%d",
			pas.ID, snapshot.TotalLongQty, snapshot.TotalShortQty, snapshot.TotalNetQty)
	}

	pas.ControlState.RunState = StrategyRunStateStopped
	pas.Deactivate()
	log.Printf("[PairwiseArbStrategy:%s] Stopped", pas.ID)
	return nil
}

// InitializePositions å®ç°PositionInitializeræ¥å£ï¼šä»å¤–éƒ¨åˆå§‹åŒ–æŒä»“
func (pas *PairwiseArbStrategy) InitializePositions(positions map[string]int64) error {
	pas.mu.Lock()
	defer pas.mu.Unlock()

	log.Printf("[PairwiseArbStrategy:%s] Initializing positions from external source", pas.ID)

	// åˆå§‹åŒ–legæŒä»“
	if qty, exists := positions[pas.symbol1]; exists {
		pas.leg1Position = qty
		log.Printf("[PairwiseArbStrategy:%s] Initialized leg1 position: %s = %d",
			pas.ID, pas.symbol1, qty)
	}

	if qty, exists := positions[pas.symbol2]; exists {
		pas.leg2Position = qty
		log.Printf("[PairwiseArbStrategy:%s] Initialized leg2 position: %s = %d",
			pas.ID, pas.symbol2, qty)
	}

	// æ›´æ–°BaseStrategyçš„Positionï¼ˆç®€åŒ–å¤„ç†ï¼‰
	totalQty := pas.leg1Position + pas.leg2Position
	if totalQty > 0 {
		pas.EstimatedPosition.LongQty = totalQty
		pas.EstimatedPosition.NetQty = totalQty
	} else if totalQty < 0 {
		pas.EstimatedPosition.ShortQty = -totalQty
		pas.EstimatedPosition.NetQty = totalQty
	}

	log.Printf("[PairwiseArbStrategy:%s] Positions initialized: leg1=%d, leg2=%d, net=%d",
		pas.ID, pas.leg1Position, pas.leg2Position, pas.EstimatedPosition.NetQty)

	return nil
}

// GetPositionsBySymbol å®ç°PositionProvideræ¥å£ï¼šè¿”å›æŒ‰å“ç§çš„æŒä»“
func (pas *PairwiseArbStrategy) GetPositionsBySymbol() map[string]int64 {
	pas.mu.RLock()
	defer pas.mu.RUnlock()

	return map[string]int64{
		pas.symbol1: pas.leg1Position,
		pas.symbol2: pas.leg2Position,
	}
}

// GetSpreadStatus returns current spread status
func (pas *PairwiseArbStrategy) GetSpreadStatus() map[string]interface{} {
	pas.mu.RLock()
	defer pas.mu.RUnlock()

	stats := pas.spreadAnalyzer.GetStats()
	return map[string]interface{}{
		"symbol1":        pas.symbol1,
		"symbol2":        pas.symbol2,
		"price1":         pas.price1,
		"price2":         pas.price2,
		"spread":         stats.CurrentSpread,
		"spread_mean":    stats.Mean,
		"spread_std":     stats.Std,
		"z_score":        stats.ZScore,
		"hedge_ratio":    stats.HedgeRatio,
		"leg1_position":  pas.leg1Position,
		"leg2_position":  pas.leg2Position,
	}
}

// GetLegsInfo returns detailed information for each leg (for UI display)
func (pas *PairwiseArbStrategy) GetLegsInfo() []map[string]interface{} {
	pas.mu.RLock()
	defer pas.mu.RUnlock()

	// Determine side for each leg
	leg1Side := "flat"
	if pas.leg1Position > 0 {
		leg1Side = "long"
	} else if pas.leg1Position < 0 {
		leg1Side = "short"
	}

	leg2Side := "flat"
	if pas.leg2Position > 0 {
		leg2Side = "long"
	} else if pas.leg2Position < 0 {
		leg2Side = "short"
	}

	return []map[string]interface{}{
		{
			"symbol":   pas.symbol1,
			"price":    pas.price1,
			"position": pas.leg1Position,
			"side":     leg1Side,
		},
		{
			"symbol":   pas.symbol2,
			"price":    pas.price2,
			"position": pas.leg2Position,
			"side":     leg2Side,
		},
	}
}

// GetBaseStrategy returns the underlying BaseStrategy (for engine integration)
func (pas *PairwiseArbStrategy) GetBaseStrategy() *BaseStrategy {
	return pas.BaseStrategy
}
